# gpt_ecco_sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notes/: ecco.ipynb  ecco_template.ipynb  index.ipynb  offline-mode.ipynb
notes/archives/: ecco-capital-city.ipynb
src/gpt_ecco_sandbox/: ecco.py
tests/: test_gpt_ecco_sandbox.py
