[tool.poetry]
name = "gpt_ecco_sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.16.2"
sentencepiece = "^0.1.96"
ecco = "^0.1.2"
japanize-matplotlib = "^1.1.3"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.9"
ipywidgets = "^7.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
